# plugin-wingmenu

./: .clang-format  .gitignore  CMakeLists.txt  PKGBUILD  README.md  applicationsview.cpp  applicationsview.h  common.h  install.sh  itemdescriptiondelegate.cpp  itemdescriptiondelegate.h  wingmenuconfiguration.cpp  wingmenuconfiguration.h  wingmenuconfiguration.ui  wingmenuplugin.cpp  wingmenuplugin.h  wingmenuwidget.cpp  wingmenuwidget.h  wingmenuwidget.ui
cmake/: BuildPlugin.cmake
resources/: wingmenu.desktop.in
translations/: wingmenu.desktop.yaml  wingmenu.desktop_cs.yaml  wingmenu.desktop_de.yaml  wingmenu.desktop_es_ES.yaml  wingmenu.desktop_et.yaml  wingmenu.desktop_fi.yaml  wingmenu.desktop_he.yaml  wingmenu.desktop_id.yaml  wingmenu.desktop_it.yaml  wingmenu.desktop_ka.yaml  wingmenu.desktop_lt.yaml  wingmenu.desktop_nl.yaml  wingmenu.desktop_pl.yaml  wingmenu.desktop_pt.yaml  wingmenu.desktop_pt_BR.yaml  wingmenu.desktop_zh_TW.yaml  wingmenu.ts  wingmenu_cs.ts  wingmenu_de.ts  wingmenu_es.ts  wingmenu_es_ES.ts  wingmenu_et.ts  wingmenu_eu.ts  wingmenu_fi.ts  wingmenu_gl.ts  wingmenu_he.ts  wingmenu_id.ts  wingmenu_it.ts  wingmenu_ka.ts  wingmenu_kab.ts  wingmenu_lt.ts  wingmenu_nl.ts  wingmenu_pl.ts  wingmenu_pt.ts  wingmenu_pt_BR.ts  wingmenu_zh_TW.ts
